# Changelog

## [0.1.0] - 2024-03-04

### Changed

- To add support for ARM moved create-ethernet-map script from `device/bin/silicon/wormhole` to `device/bin/silicon/{x86,aarch64}`

## [0.2.0] - 2024-03-15

### Changed

- Updated create-ethernet-map (aarch64, x86) to luwen v0.3.6
	- The main reason for this upgrade was to ignore galaxy->nebula links when detecting chips. To allow support for the TG and TGG galaxy configurations.
	- In addition this also fixes a bug where not being able to allocate dma buffers would result in a crash instead of falling back to memcpy data transfer.