@@ -13,3 +13,4 @@
 - Updated create-ethernet-map (aarch64, x86) to luwen v0.3.6
 	- The main reason for this upgrade was to ignore galaxy->nebula links when detecting chips. To allow support for the TG and TGG galaxy configurations.
 	- In addition this also fixes a bug where not being able to allocate dma buffers would result in a crash instead of falling back to memcpy data transfer.
+- Updated tt_cluster_descriptor to load new cem format
